fix on dark red btn , now medium red btn ! and fix on rattrapage modale with acual date visible in confirm window

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -239,7 +239,7 @@
 
 .btn-red-back {
   margin: 0 auto;
-  background-color: $dark-red;
+  background-color: $medium-red;
   position: sticky;
   border-radius: 30px;
   width: 130px;
@@ -255,7 +255,7 @@
 }
 
 .btn-red-back:hover {
-  background-color: $dark-red;
+  background-color: $medium-red;
   color: white;
 }
 
